:wrench: chore: adjust in compose dev